fix spacing issue

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background: $secondaryTextColor;
-    padding: 144px 24px 48px 24px;
+    padding: 48px;
 
     @media screen and (min-width: $smallDesktop) {
         padding: 144px 96px 48px 96px;
